--- a/INTERNAL/.settings/org.talend.repository.prefs
+++ b/INTERNAL/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=master
 repository.project.id=enc\:migration.token.encryption.key\:C0G/2GEy8mQgXQFphVkoZyJV+vYEDEbSNLToZpwcTMBpeG6cgQvlio4\=
