Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -9,7 +9,7 @@ pool:
 variables:
 - group: talend configuration
 - name: project_name
-  value: 'Internal'
+  value: 'CloudPoc'
 - name: job_name
   value: 'test'
 - name: job_version
